@@ -2,28 +2,34 @@ package capstone.SportyUp.SportyUp_Server.service.AuthService;
 
 import capstone.SportyUp.SportyUp_Server.apiPayload.Exception.UserHandler;
 import capstone.SportyUp.SportyUp_Server.apiPayload.code.status.ErrorStatus;
+import capstone.SportyUp.SportyUp_Server.domain.CustomUserDetails;
 import capstone.SportyUp.SportyUp_Server.domain.User;
 import capstone.SportyUp.SportyUp_Server.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class CustomUserDetailsService implements UserDetailsService {
 
     private final UserRepository userRepository;
 
     @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-
+    public CustomUserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_EMAIL_NOT_FOUND));
+                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
 
-        return new org.springframework.security.core.userdetails.User(user.getEmail(), user.getPassword(), List.of());
+        return new CustomUserDetails(
+                user.getEmail(),
+                user.getPassword() == null ? "null" : user.getPassword(),
+                Collections.singletonList(new SimpleGrantedAuthority(String.valueOf(user.getRole()))),
+                user.getId());
     }
 }
